--- a/public/style.css
+++ b/public/style.css
@@ -8,6 +8,8 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin: 0 10% 0 10%;
+    text-align: center;
 }
 
 #home h1{
