--- a/public/style.css
+++ b/public/style.css
@@ -24,6 +24,7 @@ body{
 
 #topics img{
     height: 200px;
+    width: 350px;
 }
 
 #topics{
@@ -33,4 +34,6 @@ body{
     gap: 20px;
     justify-content: center;
     margin-top: 4%;
+    text-align: center;
+    font-size: large;
 }
