--- a/public/style.css
+++ b/public/style.css
@@ -37,3 +37,13 @@ body{
     text-align: center;
     font-size: large;
 }
+
+#topics p{
+    margin: 0 10% 0 10%;
+    font-family: cursive;
+}
+
+a{
+    color: white;
+    text-decoration: none;
+}
