--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,8 +8,12 @@
 </head>
 <body>
     <div id="home">
+        <% if (locals.topic) {%>
+            <h1>Talking about <%=topic%></h1>
+        <%}else{ %>
         <h1>Welcome to Aaditya's Blog</h1>
         <p>Welcome to my blog, where I explore the fascinating world of web development, AI, and technology. Join me on this journey as I share insights, tutorials, and tips on coding, design, and the latest trends in the tech industry. Let's learn and grow together!</p>
+        <%}%>
     </div>
 
     <div id="topics">
